--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GenTest: Cirriculum Site</title>
+    <title>GenTest: Cirriculum Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -75,6 +75,19 @@
         </div>
       </div>
     </nav>
+    <div class="mainHead">
+        GenTech Instructor Portal
+    </div>
+    <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col col-3">
+            <button type="button" class="btn homeLink">Deputy</button>
+          </div>
+          <div class="col">
+            <p class="homeText">Your work schedule. Check it often.</p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
 
@@ -84,5 +97,39 @@
     border-color: black;
     border-bottom-style: dashed;
     background-color: white !important;
+  }
+  .mainHead {
+    text-align: center;
+    font-size: 3.5rem;
+    color: rgba(22,136,185,1);
+    font-weight: 700;
+    margin-bottom: 3rem;
+  }
+  .homeLink {
+    border-color: black;
+    height: 3rem;
+    width: 100%;
+    background-color: rgba(22,136,185,1);
+    font-size: 1rem;
+    font-weight: 700 !important;
+
+  }
+  .homeLink:hover {
+    border-color: black;
+    background-color: rgba(22,136,185,1);
+    color: white;
+  }
+  .homeLink:active {
+    background-color: rgba(22,136,185,1) !important;
+    color: black;
+  }
+  .homeLink:focus-visible {
+    background-color: rgba(22,136,185,1);
+    color: black;
+  }
+  .homeText {
+    height: 3rem;
+    font-size: 2rem;
+    color: rgba(22,136,185,1) !important;
   }
 </style>
