--- a/index.html
+++ b/index.html
@@ -79,12 +79,17 @@
         GenTech Instructor Portal
     </div>
     <div class="container text-center">
-        <div class="row align-items-start">
+        <div class="row align-items-start" id="mainRow">
           <div class="col col-3">
+            <button type="button" class="btn homeLink">Cirriculum</button>
             <button type="button" class="btn homeLink">Deputy</button>
+            <button type="button" class="btn homeLink">Slack</button>
+
           </div>
           <div class="col">
+            <p class="homeText">All about class instruction.</p>
             <p class="homeText">Your work schedule. Check it often.</p>
+            <p class="homeText">GenTech communications.  Check it often for announcements.</p>
           </div>
         </div>
       </div>
@@ -97,6 +102,9 @@
     border-color: black;
     border-bottom-style: dashed;
     background-color: white !important;
+  }
+  #mainRow {
+    width: 10rem
   }
   .mainHead {
     text-align: center;
@@ -112,6 +120,7 @@
     background-color: rgba(22,136,185,1);
     font-size: 1rem;
     font-weight: 700 !important;
+    margin-bottom: 1rem;
 
   }
   .homeLink:hover {
@@ -131,5 +140,7 @@
     height: 3rem;
     font-size: 2rem;
     color: rgba(22,136,185,1) !important;
+    text-align: left;
+    font-weight: 500;
   }
 </style>
