--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     ></script>
     <link
       rel="icon"
-      href="https://lh5.googleusercontent.com/u3w0B59w-4XIhbWvgZWAQIWeS7iPIxBSep12gVwvwcU6QvqhSDPAg5Ota6zxq4ZpW8NmO843BvDDmL60xodDNKvI08o_AI1dGXZhNRP8fxNzZ5tv"
+      href="https://media.licdn.com/dms/image/C4E0BAQEo1Y6moZEsyg/company-logo_200_200/0/1631354636712?e=2147483647&v=beta&t=1IZIr6nV1TDIV0fbRvU5EyZH0zS_wjDphJ_m1JeAcho"
     />
   </head>
   <body>
@@ -116,7 +116,7 @@
     font-size: 3.5rem;
     color: rgba(22, 136, 185, 1);
     font-weight: 700;
-    margin-bottom: 3rem;
+    margin: 3rem
   }
   .homeLink {
     border-color: black;
