titles and descriptions

--- a/index2.html
+++ b/index2.html
@@ -129,9 +129,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Radical Robots: Bolts</h5>
+                <h5 class="card-title">Modeling to the Max</h5>
                 <p class="card-text">
-                  Intro to programming, mazes, and challenges
+                  Intro to 3D/CAD, Geometry, Puzzles and Games 
                 </p>
                 <a href="#" class="btn btn-primary">View Cirriculum</a>
               </div>
@@ -145,9 +145,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Radical Robots: Bolts</h5>
+                <h5 class="card-title">Radical Robots: RVRs</h5>
                 <p class="card-text">
-                  Intro to programming, mazes, and challenges
+                  Advanced RVR, Sensors, Mechanical Engineering
                 </p>
                 <a href="#" class="btn btn-primary">View Cirriculum</a>
               </div>
@@ -159,9 +159,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Radical Robots: Bolts</h5>
+                <h5 class="card-title">Cool Coding: MIT Scratch Jr.</h5>
                 <p class="card-text">
-                  Intro to programming, mazes, and challenges
+                  Introduction to coding and coding concepts
                 </p>
                 <a href="#" class="btn btn-primary">View Cirriculum</a>
               </div>
@@ -175,9 +175,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Radical Robots: Bolts</h5>
+                <h5 class="card-title">Cool Coding: Coding with Awbie</h5>
                 <p class="card-text">
-                  Intro to programming, mazes, and challenges
+                  Introduction to coding and coding concepts
                 </p>
                 <a href="#" class="btn btn-primary">View Cirriculum</a>
               </div>
