--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
           </div>
           <p>
             Complete the Jotform for 8 sphero indis.
-            <button type="button" class="btn btn-success checkBtn">Mark Complete</button>
+            <button type="button" class="btn btn-success checkBtn">
+              Mark Complete
+            </button>
           </p>
         </a>
         <a
@@ -222,7 +224,9 @@
           </div>
           <p>
             Fill out attendance for 3rd Quarter at Brisas.
-            <button type="button" class="btn btn-success checkBtn">Mark Complete</button>
+            <button type="button" class="btn btn-success checkBtn">
+              Mark Complete
+            </button>
           </p>
         </a>
         <a
@@ -236,7 +240,9 @@
           </div>
           <p>
             Have all students complete the post test for their cirriculum.
-            <button type="button" class="btn btn-success checkBtn">Mark Complete</button>
+            <button type="button" class="btn btn-success checkBtn">
+              Mark Complete
+            </button>
           </p>
         </a>
       </div>
@@ -335,7 +341,142 @@
         </div>
       </div>
     </div>
-    <div class="container contentArea" id="contentAreaS"></div>
+    <div class="container contentArea" id="contentAreaS">
+      <div class="card cirriculumTitle">
+        <div class="card-body headCardBody">YOUR NOTES</div>
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">School Name</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="ex: Kyrene de la Esperanza"
+          aria-label="School Name"
+          aria-describedby="basic-addon1"
+          value="Kyrene de la Esperanza"
+        />
+      </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1">Cordinator Name</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="ex: Mrs. Tracey"
+          aria-label="Cordinator Name"
+          aria-describedby="basic-addon1"
+          value="Mrs. Tracey"
+        />
+      </div>
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"
+          >Cirrculum</label
+        >
+        <select class="form-select" id="inputGroupSelect01">
+          <option>Choose...</option>
+          <option selected value="1">Bolts</option>
+          <option value="2">Game On</option>
+          <option value="3">Indis</option>
+          <option value="4">RVRs</option>
+          <option value="5">Awbie</option>
+          <option value="6">3D Modeling</option>
+          <option value="7">Scratch Jr.</option>
+        </select>
+      </div>
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"
+          >Cirrculum 2 (optional)</label
+        >
+        <select class="form-select" id="inputGroupSelect01">
+          <option selected>Choose...</option>
+          <option value="1">Bolts</option>
+          <option selected value="2">Game On</option>
+          <option value="3">Indis</option>
+          <option value="4">RVRs</option>
+          <option value="5">Awbie</option>
+          <option value="6">3D Modeling</option>
+          <option value="7">Scratch Jr.</option>
+        </select>
+      </div>
+      <div class="input-group iNotes">
+        <span class="input-group-text">Important Notes</span>
+        <textarea class="form-control" aria-label="With textarea">
+Bolts are in the back counter of the "Game Room" (students can tell you where that is). The iPads to control them are in the cupbaord right above the bolts. Grades K-2 usually ask to use chairs and I usually allow them to just make sure they get put back in the corner of the room by the door.</textarea
+        >
+      </div>
+      <div class="card cirriculumTitle">
+        <div class="card-body headCardBody">SUB NOTES</div>
+      </div>
+      <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col">
+            <div class="card subCard" style="width: 18rem">
+              <div class="card-header subHead">Brisas</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Instructor: Gavin</li>
+                <li class="list-group-item">Afterschool</li>
+                <li class="list-group-item">
+                  <button type="button" class="btn subButton btn-primary">
+                    View Notes <i class="bi bi-box-arrow-up-right"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <div class="card subCard" style="width: 18rem">
+              <div class="card-header subHead">Cierritos</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Instructor: Monica/Cristian</li>
+                <li class="list-group-item">Afterschool</li>
+                <li class="list-group-item">
+                  <button type="button" class="btn subButton btn-primary">
+                    View Notes <i class="bi bi-box-arrow-up-right"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card subCard" style="width: 18rem">
+              <div class="card-header subHead">Lagos</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Instructor: Briault</li>
+                <li class="list-group-item">Afterschool</li>
+                <li class="list-group-item">
+                  <button type="button" class="btn subButton btn-primary">
+                    View Notes <i class="bi bi-box-arrow-up-right"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <div class="card subCard" style="width: 18rem">
+              <div class="card-header subHead">Mirada</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Instructor: John</li>
+                <li class="list-group-item">Afterschool</li>
+                <li class="list-group-item">
+                  <button type="button" class="btn subButton btn-primary">
+                    View Notes <i class="bi bi-box-arrow-up-right"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card subCard" style="width: 18rem">
+              <div class="card-header subHead">Paloma</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Instructor: Perkins</li>
+                <li class="list-group-item">Enrichment</li>
+                <li class="list-group-item">
+                  <button type="button" class="btn subButton btn-primary">
+                    View Notes <i class="bi bi-box-arrow-up-right"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
@@ -398,13 +539,13 @@
     display: none;
   }
   #contentAreaT {
-    display: block;
+    display: none;
   }
   #contentAreaQ {
     display: none;
   }
   #contentAreaS {
-    display: none;
+    display: block;
   }
   #tasksGroup {
     margin-top: 2rem;
@@ -421,6 +562,19 @@
   }
   .checkBtn {
     position: absolute;
-    right: .5rem;
+    right: 0.5rem;
+  }
+  .iNotes {
+    height: 6rem;
+  }
+  .subCard {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
+  .subHead {
+    font-weight: 700;
+  }
+  .subButton {
+    width: 100%;
   }
 </style>
