--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <ul class="nav nav-tabs nav-fill">
       <li class="nav-item">
         <p class="nav-link active" onclick="changeScreen('C')" id="linkC">
-          Cirriculum
+          curriculum
         </p>
       </li>
       <li class="nav-item">
@@ -68,8 +68,8 @@
       </li>
     </ul>
     <div class="container contentArea" id="contentAreaC">
-      <div class="card cirriculumTitle">
-        <div class="card-body headCardBody">YOUR CURRENT CIRRICULUMS</div>
+      <div class="card curriculumTitle">
+        <div class="card-body headCardBody">YOUR CURRENT curriculumS</div>
       </div>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -85,7 +85,7 @@
                 <p class="card-text">
                   Intro to programming, mazes, and challenges
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
           </div>
@@ -99,15 +99,15 @@
               <div class="card-body">
                 <h5 class="card-title">Cool Coding: Game On! Level 1</h5>
                 <p class="card-text">MakeCode Arcade and Video game Design</p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
           </div>
           <div class="col"></div>
         </div>
       </div>
-      <div class="card cirriculumTitle">
-        <div class="card-body headCardBody">ALL CIRRICULUMS</div>
+      <div class="card curriculumTitle">
+        <div class="card-body headCardBody">ALL curriculumS</div>
       </div>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -123,7 +123,7 @@
                 <p class="card-text">
                   Intro to programming, mazes, and challenges
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
             <div class="card" style="width: 18rem">
@@ -137,7 +137,7 @@
                 <p class="card-text">
                   Intro to 3D/CAD, Geometry, Puzzles and Games
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
                 <p class="card-text">
                   Advanced RVR, Sensors, Mechanical Engineering
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
             <div class="card" style="width: 18rem">
@@ -167,7 +167,7 @@
                 <p class="card-text">
                   Introduction to coding and coding concepts
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
                 <p class="card-text">
                   Introduction to coding and coding concepts
                 </p>
-                <a href="#" class="btn btn-primary">View Cirriculum</a>
+                <a href="#" class="btn btn-primary">View curriculum</a>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
             <small class="text-body-secondary">Finish By: 3/27/24</small>
           </div>
           <p>
-            Have all students complete the post test for their cirriculum.
+            Have all students complete the post test for their curriculum.
             <button type="button" class="btn btn-success checkBtn">
               Mark Complete
             </button>
@@ -248,7 +248,7 @@
       </div>
     </div>
     <div class="container contentArea" id="contentAreaQ">
-      <div class="card cirriculumTitle">
+      <div class="card curriculumTitle">
         <div class="card-body headCardBody">QUICK LINKS</div>
       </div>
       <div class="container text-center">
@@ -301,7 +301,7 @@
           </div>
         </div>
       </div>
-      <div class="card cirriculumTitle">
+      <div class="card curriculumTitle">
         <div class="card-body headCardBody">CONTACTS</div>
       </div>
       <div class="container text-center">
@@ -335,14 +335,14 @@
               <li class="list-group-item contactHead">Eric</li>
               <li class="list-group-item">(623)-444-0350</li>
               <li class="list-group-item">eric@gentechsupport.com</li>
-              <li class="list-group-item">Contact for: Cirriculum Questions</li>
+              <li class="list-group-item">Contact for: curriculum Questions</li>
             </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container contentArea" id="contentAreaS">
-      <div class="card cirriculumTitle">
+      <div class="card curriculumTitle">
         <div class="card-body headCardBody">YOUR NOTES</div>
       </div>
       <div class="input-group mb-3">
@@ -403,7 +403,7 @@
 Bolts are in the back counter of the "Game Room" (students can tell you where that is). The iPads to control them are in the cupbaord right above the bolts. Grades K-2 usually ask to use chairs and I usually allow them to just make sure they get put back in the corner of the room by the door.</textarea
         >
       </div>
-      <div class="card cirriculumTitle">
+      <div class="card curriculumTitle">
         <div class="card-body headCardBody">SUB NOTES</div>
       </div>
       <div class="container text-center">
@@ -513,7 +513,7 @@ Bolts are in the back counter of the "Game Room" (students can tell you where th
   .nav-link {
     color: black;
   }
-  .cirriculumTitle {
+  .curriculumTitle {
     margin-top: 1rem;
     border: none;
     color: rgba(22, 136, 185, 1);
