double fix spelling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <ul class="nav nav-tabs nav-fill">
       <li class="nav-item">
         <p class="nav-link active" onclick="changeScreen('C')" id="linkC">
-          curriculum
+          Curriculum
         </p>
       </li>
       <li class="nav-item">
@@ -69,7 +69,7 @@
     </ul>
     <div class="container contentArea" id="contentAreaC">
       <div class="card curriculumTitle">
-        <div class="card-body headCardBody">YOUR CURRENT curriculumS</div>
+        <div class="card-body headCardBody">YOUR CURRENT CURRICULUM</div>
       </div>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -85,7 +85,7 @@
                 <p class="card-text">
                   Intro to programming, mazes, and challenges
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
               <div class="card-body">
                 <h5 class="card-title">Cool Coding: Game On! Level 1</h5>
                 <p class="card-text">MakeCode Arcade and Video game Design</p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="card curriculumTitle">
-        <div class="card-body headCardBody">ALL curriculumS</div>
+        <div class="card-body headCardBody">ALL CURRICULUMS/div>
       </div>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -123,7 +123,7 @@
                 <p class="card-text">
                   Intro to programming, mazes, and challenges
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
             <div class="card" style="width: 18rem">
@@ -137,7 +137,7 @@
                 <p class="card-text">
                   Intro to 3D/CAD, Geometry, Puzzles and Games
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
                 <p class="card-text">
                   Advanced RVR, Sensors, Mechanical Engineering
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
             <div class="card" style="width: 18rem">
@@ -167,7 +167,7 @@
                 <p class="card-text">
                   Introduction to coding and coding concepts
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
                 <p class="card-text">
                   Introduction to coding and coding concepts
                 </p>
-                <a href="#" class="btn btn-primary">View curriculum</a>
+                <a href="#" class="btn btn-primary">View Curriculum</a>
               </div>
             </div>
           </div>
@@ -335,7 +335,7 @@
               <li class="list-group-item contactHead">Eric</li>
               <li class="list-group-item">(623)-444-0350</li>
               <li class="list-group-item">eric@gentechsupport.com</li>
-              <li class="list-group-item">Contact for: curriculum Questions</li>
+              <li class="list-group-item">Contact for: Curriculum Questions</li>
             </ul>
           </div>
         </div>
@@ -536,7 +536,7 @@ Bolts are in the back counter of the "Game Room" (students can tell you where th
     border: none;
   }
   #contentAreaC {
-    display: none;
+    display: block;
   }
   #contentAreaT {
     display: none;
@@ -545,7 +545,7 @@ Bolts are in the back counter of the "Game Room" (students can tell you where th
     display: none;
   }
   #contentAreaS {
-    display: block;
+    display: none;
   }
   #tasksGroup {
     margin-top: 2rem;
