--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="card curriculumTitle">
-        <div class="card-body headCardBody">ALL CURRICULUMS/div>
+        <div class="card-body headCardBody">ALL CURRICULUMS</div>
       </div>
       <div class="container text-center">
         <div class="row align-items-start">
@@ -369,7 +369,7 @@
       </div>
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01"
-          >Cirrculum</label
+          >Curriculum/label
         >
         <select class="form-select" id="inputGroupSelect01">
           <option>Choose...</option>
@@ -384,7 +384,7 @@
       </div>
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01"
-          >Cirrculum 2 (optional)</label
+          >Curriculum 2 (optional)</label
         >
         <select class="form-select" id="inputGroupSelect01">
           <option selected>Choose...</option>
