--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       </div>
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01"
-          >Curriculum/label
+          >Curriculum</label
         >
         <select class="form-select" id="inputGroupSelect01">
           <option>Choose...</option>
